      elf/elf.h).
  * debian/local/manpages/localedef.1: fix a typo.  (Closes: #310477)
  * debian/local/manpages/iconv.1: fix the indentation (Closes: #316148)
  * debian/local/manpages/iconv.1, debian/local/manpages/localedef.1: change
    sarge into etch.
  * debian/sysdeps/kfreebsd.mk: build the udeb package with -Os on
    kfreebsd-i386 and kfreebsd-amd64.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1577 (from
    glibc-bsd).

  [ Denis Barbier ]
  * Add patches/all/submitted-new-brf-encoding.diff: Add new BRF encoding
    (ASCII Braille), submitted upstream by Samuel Thibault.

 -- Denis Barbier <barbier@debian.org>  Mon, 22 May 2006 23:14:52 +0200

glibc (2.3.6-10) unstable; urgency=low

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst: use the original path if readlink -f
    fails to canonicalize the path.  (Closes: #368116)
  * Add patches/arm/local-softfloat.diff (support for arm softfloat), and
    enable on arm-softfloat only, as it breaks other architectures.  (Closes:
    #358772)
  * debian/rules.d/control.mk: Add arm-softfloat to the architectures list.
  * Do a separate pass for the udeb package, so that it could use different
    build options.
  * Set the minimum kernel to 2.6.1 for the udeb package, except for i386,
    m68k, mips, mipsel, powerpc and s390.
  * Enable the locales-all package.  (Closes: #308020)
  * debian/sysdeps/i386.mk: build the glibc with --without-__thread again on
    i386 (Closes: #368022, #368326).
  * debhelper.in/libc.preinst, debhelper.in/libc-otherbuild.postinst,
    debhelper.in/libc.postinst, debhelper.in/libc-otherbuild.preinst: use
    /bin/sh instead of /bin/bash.  (Closes: #267594)
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1571 (from
    glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 21 May 2006 22:36:27 +0200

glibc (2.3.6-9) unstable; urgency=low

  * Don't run make install with -j, as it is not SMP safe.
