@@ -1,3 +1,6 @@
+# udeb Config
+udeb_extra_cflags = -Os
+
 # build libc with nptl instead of linuxthreads
 libc_MIN_KERNEL_SUPPORTED = 2.6.0
 libc_add-ons = nptl $(add-ons)
