@@ -1,1 +1,3 @@
+# udeb Config
 udeb_MIN_KERNEL_SUPPORTED = 2.4.1
+udeb_extra_cflags = -Os
