@@ -19,6 +19,8 @@ glibc (2.3.6-11) UNRELEASED; urgency=low
     sarge into etch.
   * debian/sysdeps/kfreebsd.mk: build the udeb package with -Os on
     kfreebsd-i386 and kfreebsd-amd64.
+  * debian/sysdeps/*.mk: build the udeb with -Os on amd64, i386, mips and 
+    mipsel.
   * patches/kfreebsd/local-sysdeps.diff: update to revision 1577 (from
     glibc-bsd).
 
